Transforge optimizations